--- a/carrito/index.html
+++ b/carrito/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>agoodshop</h1>
         <div id="cart">
-            <table>
+            <table class="table">
                 <thead>
                     <tr>
                         <th>Producto</th>
@@ -19,17 +19,17 @@
                         <th>Total</th>
                     </tr>
                 </thead>
-                <tbody id="cart-items">
+                <tbody id="cart-items"></tbody>
                     <!-- Aquí se listarán los productos -->
                 </tbody>
             </table>
-            <div class="total">
-                <h2>Total: <span id="total-price">0€</span></h2>
-            </div>
+            
+        </div>
+        <div class="total">
+            <h2>Total: <span id="total-price">0€</span></h2>
         </div>
     </div>
 
     <script src="app.js"></script>
 </body>
 </html>
-
