--- a/carrito/index.html
+++ b/carrito/index.html
@@ -20,7 +20,7 @@
                     </tr>
                 </thead>
                 <tbody id="cart-items"></tbody>
-                    <!-- Aquí se listarán los productos -->
+                    <!-- Aquí se ponen los productos -->
                 </tbody>
             </table>
             
